Fix horizontal scroll on a o-table

--- a/ontimize/components/table/o-table-theme.scss
+++ b/ontimize/components/table/o-table-theme.scss
@@ -97,7 +97,7 @@
       }
     }
 
-    .o-table-body.horizontal-scroll {
+    .o-table-overflow.horizontal-scroll {
       &::-webkit-scrollbar-thumb {
         background-color: mat-color($primary, 200, 0.5);
       }
